--- a/src/pagesAdmin/Workers/WorkersModal/WorkersModal.module.scss
+++ b/src/pagesAdmin/Workers/WorkersModal/WorkersModal.module.scss
@@ -27,7 +27,7 @@
   visibility: inherit;
 }
 .workersModal__upload {
-  label {
+  button {
     display: flex;
     justify-content: center;
     align-items: center;
@@ -39,9 +39,13 @@
     box-sizing: border-box;
     font-size: 20px;
     cursor: pointer;
-    img {
-      margin-right: 20px;
-    }
+  }
+  .linkShow{
+    border: none;
+    width: 440px;
+    height: 20px;
+    border-radius: 50px;
+    text-align: center;
   }
 }
 
