--- a/src/components/NavigationMenu/NavigationMenu.scss
+++ b/src/components/NavigationMenu/NavigationMenu.scss
@@ -66,69 +66,113 @@ nav {
       }
     }
 
-    .down-arrow {
-      cursor: pointer;
-      margin-left: -10px;
-      margin-right: 26px;
-      width: 20px;
-      height: 20px;
-      transition: transform 0.3s;
+ .privacy-settings {
+    display: flex;
+    align-items: center;
 
-      &:hover {
-        transform: rotate(180deg);
-      }
+    img {
+      width: 64px;
+      height: 64px;
+      border-radius: 50%;
+      object-fit: cover;
+    }
+
+    h1 {
+      margin-left: 12px;
+      font-size: 18px;
+      font-weight: 500;
+      color: #fff;
     }
   }
-}
+
+    // .down-arrow {
+    //   cursor: pointer;
+    //   margin-left: -10px;
+    //   margin-right: 26px;
+    //   width: 20px;
+    //   height: 20px;
+    //   transition: transform 0.3s;
+
+    //   &:hover {
+    //     transform: rotate(180deg);
+    //   }
+    // }
+  }
 
 
-
-//на будущее - выпадающее меню:
-.navigation-menu-dop {
-  display: flex;
-  //flex-direction: column;
-  align-items: center;
-  //padding-top: 10px;
-  background-color: $main-background-color;
-
-  .dropdown-menu {
+  .privacy-settings {
     display: flex;
     flex-direction: column;
     align-items: center;
+    justify-content: center;
+    text-align: center;
 
-    .menu-item {
-      display: flex;
-      align-items: center;
-      padding: 8px 12px;
-      border-radius: 12px;
-      text-decoration: none;
-      color: #fff;
-      opacity: 0.8;
-      border: 0.5px solid #f4f4f410;
-      font-size: 14px;
+    img {
+      width: 64px;
+      height: 64px;
+      border-radius: 50%;
+      object-fit: cover;
+    }
+
+    h1 {
+      margin: 0;
+      width: 100%;
+      text-align: center;
+      font-size: 18px;
       font-weight: 500;
-      line-height: 18px;
-      margin-bottom: 8px;
-      cursor: pointer;
-      transition: background-color 0.3s, transform 0.3s;
-
-      img {
-        margin-right: 6px;
-      }
-
-      &:hover {
-        opacity: 1;
-        transform: scale(1.05);
-      }
+      color: #fff;
     }
   }
 }
 
-.dropdown-menu-1 {
-  position: relative;
-  left: 270px;
-}
-.dropdown-menu-2 {
-  position: relative;
-  left: 990px;
-}
+
+
+// //на будущее - выпадающее меню:
+// .navigation-menu-dop {
+//   display: flex;
+//   //flex-direction: column;
+//   align-items: center;
+//   //padding-top: 10px;
+//   background-color: $main-background-color;
+
+//   .dropdown-menu {
+//     display: flex;
+//     flex-direction: column;
+//     align-items: center;
+
+//     .menu-item {
+//       display: flex;
+//       align-items: center;
+//       padding: 8px 12px;
+//       border-radius: 12px;
+//       text-decoration: none;
+//       color: #fff;
+//       opacity: 0.8;
+//       border: 0.5px solid #f4f4f410;
+//       font-size: 14px;
+//       font-weight: 500;
+//       line-height: 18px;
+//       margin-bottom: 8px;
+//       cursor: pointer;
+//       transition: background-color 0.3s, transform 0.3s;
+
+//       img {
+//         margin-right: 6px;
+//       }
+
+//       &:hover {
+//         opacity: 1;
+//         transform: scale(1.05);
+//       }
+//     }
+//   }
+// }
+
+// .dropdown-menu-1 {
+//   position: relative;
+//   left: 270px;
+// }
+// .dropdown-menu-2 {
+//   position: relative;
+//   left: 990px;
+// }
