--- a/src/pagesWorker/MyPage/WorkerInitial/WorkerInitial.module.scss
+++ b/src/pagesWorker/MyPage/WorkerInitial/WorkerInitial.module.scss
@@ -6,13 +6,19 @@
 }
 
 .workerAvatar {
-  padding-left: 24px;
+  visibility: inherit;
 }
-.small .workerAvatar {
+   .small .workerAvatar {
+  border-radius: 100% ;
+  margin-left: 24px;
   width: 48px;
   height: 48px;
 }
 .large .workerAvatar {
+  border-radius: 100%;
+  margin-left: 24px;
+  border-radius: 100%;
+  margin-left: 24px;
   width: 72px;
   height: 72px;
 }
