--- a/src/pagesAdmin/Workers/WorkersModalAddUser/WorkersModalAddUser.module.scss
+++ b/src/pagesAdmin/Workers/WorkersModalAddUser/WorkersModalAddUser.module.scss
@@ -38,7 +38,7 @@
     cursor: pointer;
   }
   .workerLoginAdd {
-    margin-left: 20px;
+    margin-left: 10px;
 
     input {
       color: white;
@@ -127,6 +127,22 @@
 .workerPositionAdd{
   margin-bottom: 16px;
 }
+.workerEmailAdd{
+
+  margin-left: 103px;
+
+    input {
+      color: white;
+      padding-left: 10px;
+      position: relative;
+      width: 215px;
+      height: 36px;
+      box-sizing: border-box;
+      border: none;
+      border-radius: 10px;
+      background: rgba(244, 244, 244, 0.02);
+    }
+}
 .workerStartdateAdd {
   margin-bottom: 16px;
   input {
@@ -179,4 +195,11 @@
     right: 6px;
     border: 1px dotted gray;
   }
+}
+
+.errorMessages{
+  font-size: 14px;
+  color: red;
+  display: flex;
+  justify-content: center;
 }
