--- a/src/pagesWorker/PrivacySettings/PrivacySettings.module.scss
+++ b/src/pagesWorker/PrivacySettings/PrivacySettings.module.scss
@@ -1,5 +1,19 @@
-.mockPrivacySettingsContent {
-    position: absolute;
-    top: 150px;
-    right:10px;
-}
+.userSettingsPage {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    padding: 20px;
+  
+    h1 {
+      margin-bottom: 20px;
+    }
+  }
+  
+  .userFullName {
+    font-size: 1.5rem;
+    font-weight: bold;
+    margin-bottom: 10px;
+  }
+  
+  
+  
