--- a/src/pagesAdmin/Workers/WorkerPage/ModalAchieveLibrary/ModalAchieveLibrary.module.scss
+++ b/src/pagesAdmin/Workers/WorkerPage/ModalAchieveLibrary/ModalAchieveLibrary.module.scss
@@ -43,7 +43,7 @@
 h1 {
   align-items: left;
   justify-self: center;
-  font-family: Proxima Nova;
+  font-family: "Open Sans";
   font-size: 24px;
   font-weight: 600;
   line-height: 32px;
