--- a/src/pagesAdmin/Workers/WorkerPage/buttons&inputes/buttons.module.scss
+++ b/src/pagesAdmin/Workers/WorkerPage/buttons&inputes/buttons.module.scss
@@ -11,12 +11,13 @@ button {
 .searchInputContainer {
   border: none;
   .searchInput {
+    
     color: white;
-    text-align: right;
-    width: 180px;
+   padding-left: 40px;
+    width: 554px;
     height: 40px;
     border: none;
-    background: url("@/assets/search-icon.svg") no-repeat, #1C1C1C;
+    background: url("@/assets/search-icon.svg") no-repeat, none;
     background-position: 6px 9px;
     box-sizing: border-box;
     border-bottom: 1px solid rgba(244, 244, 244, 0.04);
@@ -40,8 +41,8 @@ button {
   border-radius: 16px;
   text-decoration: none;
   color: #fff;
-  opacity: 0.6;
-  border: 0.5px solid #f4f4f410;
+background: none;
+ border: none;
   font-size: 16px;
   font-weight: 500;
   line-height: 20px;
@@ -54,25 +55,29 @@ button {
     margin-right: 8px;
   }
   &:hover {
-    opacity: 1;
+    background-color: #f4f4f40a;
     transform: scale(1.05);
+
   }
   &.active {
     background-color: #f4f4f40a;
     color: #fff;
-    opacity: 1;
     transform: scale(0.95);
   }
 }
 .deleteBanWorkerButton {
   display: flex;
   align-items: center;
+  justify-content: center;
+  margin-top: 26px;
+  width: 175px;
+  height: 60px;
   padding: 8px 12px;
   border-radius: 16px;
   text-decoration: none;
-  color: #e04242;
-  opacity: 0.6;
-  border: 0.5px solid #ea3d3d66;
+  border: none;
+  background:#6A11C3 ;
+  color: #F4F4F4;
   font-size: 16px;
   font-weight: 500;
   line-height: 20px;
@@ -131,12 +136,14 @@ button {
 .giveAchieveButton {   //копипаста из .linkWorkerButton
   display: flex;
   align-items: center;
+  width: 141px;
+  height: 60px;
   padding: 8px 12px;
   border-radius: 16px;
   text-decoration: none;
   color: #fff;
-  opacity: 0.6;
-  border: 0.5px solid #f4f4f410;
+  border: none;
+  background: #6A11C3;
   font-size: 16px;
   font-weight: 500;
   line-height: 20px;
