--- a/src/styles/configcss.scss
+++ b/src/styles/configcss.scss
@@ -1,5 +1,5 @@
 
-$main-background-color: #1c1c1c;
+$main-background-color: linear-gradient(180.00deg, rgb(65, 61, 61),rgba(76, 10, 139, 0.98) 100%);
 $color-light: #f4f4f4;
 
 $color-error: red;
