--- a/src/pagesAdmin/AchievementsConstructor/AchievementsConstructor.module.scss
+++ b/src/pagesAdmin/AchievementsConstructor/AchievementsConstructor.module.scss
@@ -143,7 +143,7 @@
   
           h2 {
             color: rgb(244, 244, 244);
-            font-family: Proxima Nova;
+            font-family: "Open Sans";
             font-size: 20px;
             font-weight: 500;
             line-height: 24px;
@@ -152,7 +152,7 @@
           }
   
           p {
-            font-family: Proxima Nova;
+            font-family: "Open Sans";
             font-size: 14px;
             font-weight: 400;
             line-height: 18px;
