--- a/src/pagesAdmin/MyPage/WorkerData/WorkerData.module.scss
+++ b/src/pagesAdmin/MyPage/WorkerData/WorkerData.module.scss
@@ -55,7 +55,7 @@
 }
 
 .workerName {
-  font-size: 24px;
+  font-size: 44px;
   color: #fff;
   font-weight: 700;
   line-height: 56px;
@@ -73,9 +73,10 @@
   justify-content: space-between;
   align-items: center;
   margin-bottom: 20px;
+  margin-top: 27px;
 }
-h2 {
-  font-family: Proxima Nova;
+h1 {
+  font-family: "Open Sans";
   font-size: 20px;
   font-weight: 400;
   line-height: 28px;
@@ -95,11 +96,14 @@ h2 {
   width: 100%;
 }
 
+.editableField {
 
+  border: 1px solid orange !important;
+}
 
 .workerInformation input,
 .workerInformation .react-datepicker-wrapper {
-  border: 1px solid #444;
+  border: 1px solid white;
   border-radius: 12px;
   //field-sizing: content;
   color: white;
@@ -130,14 +134,14 @@ h2 {
 }
 
 
-.workerInformation input[type=text],  //чтобы инпут дата-пикера не выезжал за пределы контейнера.
-.workerInformation textarea {  //но так имя не влезает!
-   width: 100%;
-    box-sizing: border-box;
+// .workerInformation input[type=text],  //чтобы инпут дата-пикера не выезжал за пределы контейнера.
+// .workerInformation textarea {  //но так имя не влезает!
+//    width: 100%;
+//     box-sizing: border-box;
   
-  //или:
-  //width: -webkit-fill-available !important;
-}
+//   //или:
+//   //width: -webkit-fill-available !important;
+// }
 /*
 .workerInformation .react-datepicker-wrapper {
     width: calc(100% - 22px); 
@@ -192,6 +196,7 @@ h2 {
   }
 }
 .workerLastName {
+  
   visibility: inherit;
   input{
     width: 242px;
@@ -212,6 +217,7 @@ h2 {
 .workerNumber {
   visibility: inherit;
   input{
+    background: none;
     width: 242px;
     height: 60px;
     border-radius: 30px;
@@ -236,3 +242,4 @@ h2 {
     padding-left: 10px;
   }
 }
+
