--- a/src/pagesAdmin/Workers/WorkerPage/WorkerData/WorkerData.module.scss
+++ b/src/pagesAdmin/Workers/WorkerPage/WorkerData/WorkerData.module.scss
@@ -73,10 +73,10 @@
   justify-content: space-between;
   align-items: center;
   margin-bottom: 20px;
-  margin-top: 51px;
+  margin-top: 27px;
 }
 h2 {
-  font-family: Proxima Nova;
+  font-family: "Open Sans";
   font-size: 20px;
   font-weight: 400;
   line-height: 28px;
@@ -97,10 +97,14 @@ h2 {
 }
 
 
+.editableField {
+
+  border: 1px solid orange !important;
+}
 
 .workerInformation input,
 .workerInformation .react-datepicker-wrapper {
-  border: 1px solid #444;
+  border: 1px solid white;
   border-radius: 12px;
   //field-sizing: content;
   color: white;
@@ -166,6 +170,7 @@ h2 {
 }
 .workerLogin {
   visibility: inherit;
+
   input{
     width: 242px;
     height: 60px;
@@ -213,6 +218,7 @@ h2 {
 .workerNumber {
   visibility: inherit;
   input{
+    background: none;
     width: 242px;
     height: 60px;
     border-radius: 30px;
