--- a/src/pagesAdmin/Workers/WorkersModal/WorkersModal.module.scss
+++ b/src/pagesAdmin/Workers/WorkersModal/WorkersModal.module.scss
@@ -1,3 +1,5 @@
+@import "../../../styles/fonts";
+
 .workersModal {
   display: flex;
   padding-left: 20px;
@@ -13,7 +15,7 @@
     4px 4px 100px 0px rgba(0, 0, 0, 0.05),
     -4px -4px 100px 0px rgba(0, 0, 0, 0.05);
   backdrop-filter: blur(60px);
-  background: rgba(32, 32, 33, 0.8);
+  background: linear-gradient(160deg, rgba(40,1,79,1) 0%, rgba(84,20,148,1) 99%);
 
   transition: transform 0.3s ease-out;
 }
@@ -21,24 +23,36 @@
   visibility: inherit;
 }
 .title{
-  visibility: inherit;
+      h3{
+        display: flex;
+        img{
+          margin-right: 20px;
+        }
+      }
 }
 .workersModal__form{
   visibility: inherit;
 }
 .workersModal__upload {
   button {
+    font-weight: bold;
+    margin-top: 51px;
     display: flex;
     justify-content: center;
     align-items: center;
     width: 440px;
     height: 88px;
-    border: 1px dashed rgb(106, 17, 195);
+    border: 1px solid white;
     border-radius: 20px;
     background: rgba(106, 17, 195, 0.12);
     box-sizing: border-box;
     font-size: 20px;
     cursor: pointer;
+    img{
+      position: relative;
+      left: -10px;
+  
+    }
   }
   .linkShow{
     border: none;
@@ -54,19 +68,21 @@
 }
 
 .btn_collaborator {
+  font-weight: bold;
   display: flex;
   justify-content: center;
   align-items: center;
   width: 440px;
   height: 88px;
   box-sizing: border-box;
-  border: 1px solid rgb(106, 17, 195);
+  border: 1px solid white;
   border-radius: 20px;
   background: rgba(106, 17, 195, 0.12);
   font-size: 20px;
   cursor: pointer;
   img {
-    margin-right: 20px;
+    position: relative;
+    left: -98px;
   }
 }
 .workersModal__formCheckbox {
@@ -95,45 +111,34 @@
 }
 
 .btnGroups {
+  display: flex;
+  justify-content: space-between;
   position: relative;
   top: 66px;
-  left: 185px;
 }
 .btn__close {
-  width: 124px;
-height: 36px;
+  width: 126px;
+height: 40px;
 font-size: 18px;
+font-weight: bold;
   box-sizing: border-box;
-  border-radius: 10px;
-  backdrop-filter: blur(12px);
-  background: rgba(244, 244, 244, 0.06);
-  opacity: 0.8;
+  border-radius: 16px;
+  background:#6A11C3;
   border: none;
   margin-right: 12px;
   cursor: pointer;
-  img{
-    position: relative;
-    top: 4px;
-    right: 6px;
-    border:1px dotted gray
-  }
 }
 
 .btn__add{
-  width: 124px;
-  height: 36px;
+  width: 126px;
+  height: 40px;
   font-size: 18px;
+  font-weight: bold;
   box-sizing: border-box;
-  border-radius: 10px;
+  border-radius: 16px;
   backdrop-filter: blur(12px);
-  background: rgba(106, 17, 195, 0.32);
+  background: #AB57FF;
     border: none;
     margin-right: 12px;
     cursor: pointer;
-    img{
-      position: relative;
-      top: 4px;
-      right: 6px;
-      border:1px dotted gray
-    }
 }
