--- a/src/pagesAdmin/Workers/WorkersModalAddUser/WorkersModalAddUser.module.scss
+++ b/src/pagesAdmin/Workers/WorkersModalAddUser/WorkersModalAddUser.module.scss
@@ -4,9 +4,15 @@
 }
 
 .title {
+  display: flex;
   position: relative;
   left: 20px;
+  margin-top: 20px;
   font-size: 24px;
+  font-weight: bold;
+  img{
+   margin-right: 20px;
+  }
 }
 .formFilling__rightContent{
   visibility: inherit;
@@ -22,8 +28,8 @@
   box-shadow:
     4px 4px 100px 0px rgba(0, 0, 0, 0.05),
     -4px -4px 100px 0px rgba(0, 0, 0, 0.05);
-  backdrop-filter: blur(60px);
-  background: rgba(32, 32, 33, 0.8);
+
+    background: linear-gradient(160deg, rgba(40,1,79,1) 0%, rgba(84,20,148,1) 99%);
 }
 .header {
   display: flex;
@@ -38,16 +44,17 @@
     cursor: pointer;
   }
   .workerLoginAdd {
-    margin-left: 10px;
-
+    margin-top: 63px;
+    margin-left: 30px;
+    margin-bottom:  30px;
     input {
       color: white;
       padding-left: 10px;
       position: relative;
-      width: 215px;
-      height: 36px;
+      width: 555px;
+      height: 40px;
       box-sizing: border-box;
-      border: none;
+      border: 1px solid #F4F4F4;
       border-radius: 10px;
       background: rgba(244, 244, 244, 0.02);
     }
@@ -57,17 +64,19 @@
 
 .description__title {
   margin: 0;
+  font-size: 16px;
+
 }
 
 .workersModalAddUser__input {
   color: white;
   padding-left: 10px;
-  width: 293px;
+  width: 256px;
   height: 36px;
   box-sizing: border-box;
   border-radius: 10px;
   background: rgba(244, 244, 244, 0.06);
-  border: none;
+  border: 1px solid #F4F4F4;
 }
 
 .formFilling {
@@ -101,12 +110,14 @@
   }
 }
 .workerBirthdayAdd {
+ 
   input {
     color: white;
     background-image: url("../../../assets/dateIcon.svg");
     background-repeat: no-repeat;
     background-position: 9px 9px;
     padding-left: 29px;
+    
   }
 }
 .workerNameAdd{
@@ -127,22 +138,22 @@
 .workerPositionAdd{
   margin-bottom: 16px;
 }
-.workerEmailAdd{
+// .workerEmailAdd{
 
-  margin-left: 103px;
+//   margin-left: 103px;
 
-    input {
-      color: white;
-      padding-left: 10px;
-      position: relative;
-      width: 215px;
-      height: 36px;
-      box-sizing: border-box;
-      border: none;
-      border-radius: 10px;
-      background: rgba(244, 244, 244, 0.02);
-    }
-}
+//     input {
+//       color: white;
+//       padding-left: 10px;
+//       position: relative;
+//       width: 215px;
+//       height: 36px;
+//       box-sizing: border-box;
+//       border: none;
+//       border-radius: 10px;
+//       background: rgba(244, 244, 244, 0.02);
+//     }
+// }
 .workerStartdateAdd {
   margin-bottom: 16px;
   input {
@@ -154,47 +165,37 @@
   }
 }
 .btnGroups {
+  display: flex;
+  justify-content: space-between;
   position: relative;
-  top: 66px;
-  left: 397px;
+  align-items: center;
+  margin-left: 46px;
 }
 .btn__close {
-  width: 124px;
-  height: 36px;
+  width: 183px;
+  height: 40px;
   font-size: 18px;
   box-sizing: border-box;
-  border-radius: 10px;
-  backdrop-filter: blur(12px);
-  background: rgba(244, 244, 244, 0.06);
+  border-radius: 16px;
+  background:#6A11C3;
   opacity: 0.8;
   border: none;
   margin-right: 12px;
   cursor: pointer;
-  img {
-    position: relative;
-    top: 4px;
-    right: 6px;
-    border: 1px dotted gray;
-  }
+
 }
 
 .btn__add {
-  width: 124px;
-  height: 36px;
+  margin-right: 51px;
+  width: 183px;
+  height: 40px;
   font-size: 18px;
   box-sizing: border-box;
-  border-radius: 10px;
-  backdrop-filter: blur(12px);
-  background: rgba(106, 17, 195, 0.32);
+  border-radius: 16px;
+  background: #AB57FF;
   border: none;
-  margin-right: 12px;
   cursor: pointer;
-  img {
-    position: relative;
-    top: 4px;
-    right: 6px;
-    border: 1px dotted gray;
-  }
+
 }
 
 .errorMessages{
