--- a/src/pagesWorker/MyPage/WorkerData/WorkerData.module.scss
+++ b/src/pagesWorker/MyPage/WorkerData/WorkerData.module.scss
@@ -55,7 +55,7 @@
 }
 
 .workerName {
-  font-size: 24px;
+  font-size: 44px;
   color: #fff;
   font-weight: 700;
   line-height: 56px;
@@ -74,8 +74,8 @@
   align-items: center;
   margin-bottom: 20px;
 }
-h2 {
-  font-family: Proxima Nova;
+h1 {
+  font-family: "Open Sans";
   font-size: 20px;
   font-weight: 400;
   line-height: 28px;
@@ -95,11 +95,13 @@ h2 {
   width: 100%;
 }
 
+.editableField {
 
+  border: 1px solid orange !important;
+}
 
 .workerInformation input,
 .workerInformation .react-datepicker-wrapper {
-  border: 1px solid #444;
   border-radius: 12px;
   //field-sizing: content;
   color: white;
@@ -130,14 +132,14 @@ h2 {
 }
 
 
-.workerInformation input[type=text],  //чтобы инпут дата-пикера не выезжал за пределы контейнера.
-.workerInformation textarea {  //но так имя не влезает!
-   width: 100%;
-    box-sizing: border-box;
+// .workerInformation input[type=text],  //чтобы инпут дата-пикера не выезжал за пределы контейнера.
+// .workerInformation textarea {  //но так имя не влезает!
+//    width: 100%;
+//     box-sizing: border-box;
   
-  //или:
-  //width: -webkit-fill-available !important;
-}
+//   //или:
+//   //width: -webkit-fill-available !important;
+// }
 /*
 .workerInformation .react-datepicker-wrapper {
     width: calc(100% - 22px); 
@@ -166,6 +168,7 @@ h2 {
 .workerLogin {
   visibility: inherit;
   input{
+    border: 1px solid rgba(209, 211, 212, 0.2);
     width: 242px;
     height: 60px;
     border-radius: 30px;
@@ -175,6 +178,7 @@ h2 {
 .workerFirstName {
   visibility: inherit;
   input{
+    border: 1px solid rgba(209, 211, 212, 0.2);
     padding-left: 10px;
     width: 242px;
     height: 60px;
@@ -185,6 +189,7 @@ h2 {
 .workerMiddleName {
   visibility: inherit;
   input{
+    border: 1px solid rgba(209, 211, 212, 0.2);
     padding-left: 10px;
     width: 242px;
     height: 60px;
@@ -192,8 +197,10 @@ h2 {
   }
 }
 .workerLastName {
+  
   visibility: inherit;
   input{
+    border: 1px solid rgba(209, 211, 212, 0.2);
     width: 242px;
     height: 60px;
     border-radius: 30px;
@@ -203,6 +210,7 @@ h2 {
 .workerBirthday {
   visibility: inherit;
   input{
+    border: 1px solid rgba(209, 211, 212, 0.2);
     width: 242px;
     height: 60px;
     border-radius: 30px;
@@ -212,6 +220,7 @@ h2 {
 .workerNumber {
   visibility: inherit;
   input{
+    border: 1px solid rgba(209, 211, 212, 0.2);
     width: 242px;
     height: 60px;
     border-radius: 30px;
@@ -221,6 +230,7 @@ h2 {
 .workerStartdate {
   visibility: inherit;
   input{
+    border: 1px solid rgba(209, 211, 212, 0.2);
     width: 242px;
     height: 60px;
     border-radius: 30px;
@@ -230,9 +240,11 @@ h2 {
 .workerPosition {
   visibility: inherit;
   input{
+    border: 1px solid rgba(209, 211, 212, 0.2);
     width: 242px;
     height: 60px;
     border-radius: 30px;
     padding-left: 10px;
   }
 }
+
