--- a/src/pagesWorker/MyPage/WorkerRanks/WorkerRanks.module.scss
+++ b/src/pagesWorker/MyPage/WorkerRanks/WorkerRanks.module.scss
@@ -38,9 +38,9 @@
   
 }
 .workerRanksUnit {
-  position: absolute;
-  top: 140px;
+  position: relative;
+  top: 11px;
   font-size: 35px;
-  right: 43px;
+  right: 37px;
 }
 
