--- a/src/styles/general.scss
+++ b/src/styles/general.scss
@@ -8,7 +8,8 @@
 
   color-scheme: light dark;
   color: rgba(255, 255, 255, 0.87);
-  background: linear-gradient(160deg, rgba(40,1,79,1) 0%, rgba(84,20,148,1) 99%);
+  background: linear-gradient(160deg, rgba(32, 0, 63, 1) 0%, rgba(67, 16, 118, 1) 99%); //ОБЩИЙ ГРАДИЕНТ
+
 
   font-synthesis: none;
   text-rendering: optimizeLegibility;
