--- a/src/pagesAdmin/MyPage/WorkerData/WorkerData.module.scss
+++ b/src/pagesAdmin/MyPage/WorkerData/WorkerData.module.scss
@@ -2,7 +2,6 @@
   visibility: inherit;
 }
 
-
 .workerInitial {
   position: relative;
   display: flex;
@@ -25,22 +24,18 @@
   border-radius: 50%;
   padding: 10px;
   cursor: pointer;
-  display: none; 
 
-  p{
+  img {
     position: relative;
-    left: 6px;
-    top: -10px;
-    font-size: 12px;
+    width: 50px;
+    height: 50px;
+    left: 13px;
+    top: -4px;
   }
 }
 
-.avatarWrapper:hover .editIcon {
-  display: block; // Показываем иконку при наведении
-}
-
 .small .workerAvatar {
-  border-radius: 100% ;
+  border-radius: 100%;
   margin-left: 24px;
   width: 48px;
   height: 48px;
@@ -97,7 +92,6 @@ h1 {
 }
 
 .editableField {
-
   border: 1px solid orange !important;
 }
 
@@ -133,12 +127,11 @@ h1 {
   opacity: 0.8;
 }
 
-
 // .workerInformation input[type=text],  //чтобы инпут дата-пикера не выезжал за пределы контейнера.
 // .workerInformation textarea {  //но так имя не влезает!
 //    width: 100%;
 //     box-sizing: border-box;
-  
+
 //   //или:
 //   //width: -webkit-fill-available !important;
 // }
@@ -169,7 +162,7 @@ h1 {
 }
 .workerLogin {
   visibility: inherit;
-  input{
+  input {
     width: 242px;
     height: 60px;
     border-radius: 30px;
@@ -178,7 +171,7 @@ h1 {
 }
 .workerFirstName {
   visibility: inherit;
-  input{
+  input {
     padding-left: 10px;
     width: 242px;
     height: 60px;
@@ -188,7 +181,7 @@ h1 {
 }
 .workerMiddleName {
   visibility: inherit;
-  input{
+  input {
     padding-left: 10px;
     width: 242px;
     height: 60px;
@@ -196,9 +189,8 @@ h1 {
   }
 }
 .workerLastName {
-  
   visibility: inherit;
-  input{
+  input {
     width: 242px;
     height: 60px;
     border-radius: 30px;
@@ -207,7 +199,7 @@ h1 {
 }
 .workerBirthday {
   visibility: inherit;
-  input{
+  input {
     width: 242px;
     height: 60px;
     border-radius: 30px;
@@ -216,7 +208,7 @@ h1 {
 }
 .workerNumber {
   visibility: inherit;
-  input{
+  input {
     background: none;
     width: 242px;
     height: 60px;
@@ -226,7 +218,7 @@ h1 {
 }
 .workerStartdate {
   visibility: inherit;
-  input{
+  input {
     width: 242px;
     height: 60px;
     border-radius: 30px;
@@ -235,11 +227,10 @@ h1 {
 }
 .workerPosition {
   visibility: inherit;
-  input{
+  input {
     width: 242px;
     height: 60px;
     border-radius: 30px;
     padding-left: 10px;
   }
 }
-
