--- a/src/pagesAdmin/Workers/WorkerPage/WorkerData/WorkerData.module.scss
+++ b/src/pagesAdmin/Workers/WorkerPage/WorkerData/WorkerData.module.scss
@@ -25,13 +25,13 @@
   border-radius: 50%;
   padding: 10px;
   cursor: pointer;
-  display: none; 
 
-  p{
+  img {
     position: relative;
-    left: 6px;
-    top: -10px;
-    font-size: 12px;
+    width: 50px;
+    height: 50px;
+    left: 13px;
+    top: -4px;
   }
 }
 
