--- a/src/pagesWorker/MyPage/WorkerRanks/WorkerRanks.module.scss
+++ b/src/pagesWorker/MyPage/WorkerRanks/WorkerRanks.module.scss
@@ -1,4 +1,6 @@
 .workerRanksMenu {
+  position: relative;
+  left: 20px;
   display: flex;
   flex-direction: row;
   border: 1px solid white;
@@ -14,6 +16,7 @@
   padding: 15px 50px;
 }
 .workerRanksInput {
+
   margin: 20px;
   background-color: #1C1C1C;
   background: none;
