--- a/src/pagesAdmin/Workers/WorkerPage/WorkerRanks/WorkerRanks.module.scss
+++ b/src/pagesAdmin/Workers/WorkerPage/WorkerRanks/WorkerRanks.module.scss
@@ -3,6 +3,9 @@
   flex-direction: row;
   border: 1px solid white;
     border-radius: 20px;
+    position: relative;
+    left: 20px;
+ 
 }
 
 .workerRanksTitle {
