--- a/src/pagesWorker/MyPage/WorkerData/WorkerData.module.scss
+++ b/src/pagesWorker/MyPage/WorkerData/WorkerData.module.scss
@@ -97,6 +97,7 @@ h1 {
 .workerInformation input,
 .workerInformation .react-datepicker-wrapper {
   border-radius: 12px;
+ 
   //field-sizing: content;
   color: white;
   margin-bottom: 12px;
@@ -161,7 +162,7 @@ h1 {
 .workerLogin {
   visibility: inherit;
   input {
-    border: 1px solid rgba(209, 211, 212, 0.2);
+    border: 1px solid white;
     width: 242px;
     height: 60px;
     border-radius: 30px;
@@ -171,7 +172,7 @@ h1 {
 .workerFirstName {
   visibility: inherit;
   input {
-    border: 1px solid rgba(209, 211, 212, 0.2);
+    border: 1px solid white;
     padding-left: 10px;
     width: 242px;
     height: 60px;
@@ -182,7 +183,7 @@ h1 {
 .workerMiddleName {
   visibility: inherit;
   input {
-    border: 1px solid rgba(209, 211, 212, 0.2);
+    border: 1px solid white;
     padding-left: 10px;
     width: 242px;
     height: 60px;
@@ -192,7 +193,7 @@ h1 {
 .workerLastName {
   visibility: inherit;
   input {
-    border: 1px solid rgba(209, 211, 212, 0.2);
+    border: 1px solid white;
     width: 242px;
     height: 60px;
     border-radius: 30px;
@@ -202,7 +203,7 @@ h1 {
 .workerBirthday {
   visibility: inherit;
   input {
-    border: 1px solid rgba(209, 211, 212, 0.2);
+    border: 1px solid white;
     width: 242px;
     height: 60px;
     border-radius: 30px;
@@ -212,7 +213,7 @@ h1 {
 .workerNumber {
   visibility: inherit;
   input {
-    border: 1px solid rgba(209, 211, 212, 0.2);
+    border: 1px solid white;
     width: 242px;
     height: 60px;
     border-radius: 30px;
@@ -222,7 +223,7 @@ h1 {
 .workerStartdate {
   visibility: inherit;
   input {
-    border: 1px solid rgba(209, 211, 212, 0.2);
+    border: 1px solid white;
     width: 242px;
     height: 60px;
     border-radius: 30px;
@@ -232,7 +233,7 @@ h1 {
 .workerPosition {
   visibility: inherit;
   input {
-    border: 1px solid rgba(209, 211, 212, 0.2);
+    border: 1px solid white;
     width: 242px;
     height: 60px;
     border-radius: 30px;
