--- a/src/pagesWorker/MyPage/WorkerData/WorkerData.module.scss
+++ b/src/pagesWorker/MyPage/WorkerData/WorkerData.module.scss
@@ -2,7 +2,6 @@
   visibility: inherit;
 }
 
-
 .workerInitial {
   position: relative;
   display: flex;
@@ -25,22 +24,18 @@
   border-radius: 50%;
   padding: 10px;
   cursor: pointer;
-  display: none; 
 
-  p{
+  img {
     position: relative;
-    left: 6px;
-    top: -10px;
-    font-size: 12px;
+    width: 50px;
+    height: 50px;
+    left: 13px;
+    top: -4px;
   }
 }
 
-.avatarWrapper:hover .editIcon {
-  display: block; // Показываем иконку при наведении
-}
-
 .small .workerAvatar {
-  border-radius: 100% ;
+  border-radius: 100%;
   margin-left: 24px;
   width: 48px;
   height: 48px;
@@ -96,13 +91,13 @@ h1 {
 }
 
 .editableField {
-
   border: 1px solid orange !important;
 }
 
 .workerInformation input,
 .workerInformation .react-datepicker-wrapper {
   border-radius: 12px;
+ 
   //field-sizing: content;
   color: white;
   margin-bottom: 12px;
@@ -131,12 +126,11 @@ h1 {
   opacity: 0.8;
 }
 
-
 // .workerInformation input[type=text],  //чтобы инпут дата-пикера не выезжал за пределы контейнера.
 // .workerInformation textarea {  //но так имя не влезает!
 //    width: 100%;
 //     box-sizing: border-box;
-  
+
 //   //или:
 //   //width: -webkit-fill-available !important;
 // }
@@ -167,8 +161,8 @@ h1 {
 }
 .workerLogin {
   visibility: inherit;
-  input{
-    border: 1px solid rgba(209, 211, 212, 0.2);
+  input {
+    border: 1px solid white;
     width: 242px;
     height: 60px;
     border-radius: 30px;
@@ -177,8 +171,8 @@ h1 {
 }
 .workerFirstName {
   visibility: inherit;
-  input{
-    border: 1px solid rgba(209, 211, 212, 0.2);
+  input {
+    border: 1px solid white;
     padding-left: 10px;
     width: 242px;
     height: 60px;
@@ -188,8 +182,8 @@ h1 {
 }
 .workerMiddleName {
   visibility: inherit;
-  input{
-    border: 1px solid rgba(209, 211, 212, 0.2);
+  input {
+    border: 1px solid white;
     padding-left: 10px;
     width: 242px;
     height: 60px;
@@ -197,10 +191,9 @@ h1 {
   }
 }
 .workerLastName {
-  
   visibility: inherit;
-  input{
-    border: 1px solid rgba(209, 211, 212, 0.2);
+  input {
+    border: 1px solid white;
     width: 242px;
     height: 60px;
     border-radius: 30px;
@@ -209,8 +202,8 @@ h1 {
 }
 .workerBirthday {
   visibility: inherit;
-  input{
-    border: 1px solid rgba(209, 211, 212, 0.2);
+  input {
+    border: 1px solid white;
     width: 242px;
     height: 60px;
     border-radius: 30px;
@@ -219,8 +212,8 @@ h1 {
 }
 .workerNumber {
   visibility: inherit;
-  input{
-    border: 1px solid rgba(209, 211, 212, 0.2);
+  input {
+    border: 1px solid white;
     width: 242px;
     height: 60px;
     border-radius: 30px;
@@ -229,8 +222,8 @@ h1 {
 }
 .workerStartdate {
   visibility: inherit;
-  input{
-    border: 1px solid rgba(209, 211, 212, 0.2);
+  input {
+    border: 1px solid white;
     width: 242px;
     height: 60px;
     border-radius: 30px;
@@ -239,12 +232,11 @@ h1 {
 }
 .workerPosition {
   visibility: inherit;
-  input{
-    border: 1px solid rgba(209, 211, 212, 0.2);
+  input {
+    border: 1px solid white;
     width: 242px;
     height: 60px;
     border-radius: 30px;
     padding-left: 10px;
   }
 }
-
