--- a/src/pagesAdmin/AchievementsConstructor/AchievementsConstructor.module.scss
+++ b/src/pagesAdmin/AchievementsConstructor/AchievementsConstructor.module.scss
@@ -7,20 +7,28 @@
   
     .titleContainer {
       display: flex;
-      align-items: center;
-      margin-bottom: 1rem;
+      align-self: self-start;
+      //align-items: center;
+      margin-left: 30px;
+      margin-bottom: 45px;
       color: #f4f4f4;
   
       img {
+        margin-top: 10px;
         width: 68px;
         height: 56px;
       }
   
       h1 {
-        margin-left: 1rem;
+        font-weight: bold;
+        margin-left: 1.5rem;
         font-size: 2rem;
         color: #f4f4f4;
       }
+    }
+    .searchAchieveInputContainer {
+      align-self: self-start;
+      margin-left: 30px;
     }
   
     .divider {
@@ -38,7 +46,7 @@
     .achievementsGrid {
       display: grid;
       grid-template-columns: repeat(auto-fill, minmax(210px, 1fr));
-      grid-gap: 20px;
+      grid-gap: 30px;
       width: 100%;
       max-width: 1200px;
   
@@ -48,8 +56,8 @@
         align-items: center;
         display: flex;
         justify-content: center;
-        width: 210px;
-        height: 274px;
+        width: 210px;  
+        height: 274px;  //НАДО БОЛЬШЕ
         flex-direction: column;
         overflow: hidden;
         box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
@@ -83,9 +91,8 @@
           transform 0.3s ease,
           box-shadow 0.3s ease;
         background-image: url("/src/assets/CardAchievement.png");
-        border: 2px dashed #fff;
       }
-  
+     
       .achievementCard {
         position: relative;
         overflow: hidden;
@@ -98,6 +105,7 @@
           width: 100%;
           height: 100%;
           background-image: var(--background-image);
+       
           background-repeat: no-repeat;
           background-position: center;
           z-index: 0;
@@ -130,8 +138,8 @@
         }
   
         img {
-          width: 140px;
-          height: 140px;
+          width: 120px;
+          height: 120px;
           margin-top: 12px;
           z-index: 1;
         }
@@ -143,16 +151,16 @@
   
           h2 {
             color: rgb(244, 244, 244);
-            font-family: "Open Sans";
-            font-size: 20px;
-            font-weight: 500;
-            line-height: 24px;
-            letter-spacing: 0.4%;
+            font-size: 18px;
+            font-weight: 700;
+            line-height: 18px;
+            letter-spacing: 0.01em;
             text-align: center;
+            margin-top: 10px; 
+            margin-bottom: 10px;
           }
   
           p {
-            font-family: "Open Sans";
             font-size: 14px;
             font-weight: 400;
             line-height: 18px;
@@ -160,6 +168,17 @@
             text-align: center;
             color: rgb(244, 244, 244);
             opacity: 0.8;
+            margin-top: 10px; 
+            margin-bottom: 10px;
+          }
+          .cardRank {
+            display: flex;
+            justify-content: center;
+            font-size: 20px;
+            font-weight: 500;
+            line-height: 24px;
+            margin-top: 20px; 
+            margin-bottom: 10px;
           }
         }
       }
