--- a/src/pagesAdmin/Workers/WorkerPage/buttons&inputes/buttons.module.scss
+++ b/src/pagesAdmin/Workers/WorkerPage/buttons&inputes/buttons.module.scss
@@ -11,9 +11,9 @@ button {
 .searchInputContainer {
   border: none;
   .searchInput {
-    
+    font-size: 16px;
     color: white;
-   padding-left: 40px;
+    padding-left: 40px;
     width: 554px;
     height: 40px;
     border: none;
