--- a/src/pagesAdmin/AchievementsConstructor/AchievementsConstructor.module.scss
+++ b/src/pagesAdmin/AchievementsConstructor/AchievementsConstructor.module.scss
@@ -137,30 +137,32 @@
           display: flex;
         }
   
-        img {
+        .achieveImg {
           width: 120px;
           height: 120px;
           margin-top: 12px;
           z-index: 1;
         }
   
-        .cardContent {
+        .achieveContent {
           padding: 1rem;
           text-align: center;
           z-index: 1;
+          width: 210px;
+          word-wrap: break-word; // Автоматический перенос текста
   
-          h2 {
+          .achieveTitle {
+            margin: 10px 5px; 
             color: rgb(244, 244, 244);
             font-size: 18px;
             font-weight: 700;
             line-height: 18px;
             letter-spacing: 0.01em;
             text-align: center;
-            margin-top: 10px; 
-            margin-bottom: 10px;
           }
   
-          p {
+          .achieveDescription {
+            margin: 10px 5px;
             font-size: 14px;
             font-weight: 400;
             line-height: 18px;
@@ -168,17 +170,20 @@
             text-align: center;
             color: rgb(244, 244, 244);
             opacity: 0.8;
-            margin-top: 10px; 
-            margin-bottom: 10px;
+            overflow: hidden;
+            text-overflow: ellipsis; // Добавление троеточия в конце текста
+            display: -webkit-box;
+            -webkit-line-clamp: 2; // Ограничение текста до двух строк
+            -webkit-box-orient: vertical;
+            
           }
-          .cardRank {
+          .achieveRank {
             display: flex;
             justify-content: center;
             font-size: 20px;
             font-weight: 500;
             line-height: 24px;
-            margin-top: 20px; 
-            margin-bottom: 10px;
+            margin: 20px 5px 10px;
           }
         }
       }
