--- a/src/pagesAdmin/AchievementsConstructor/buttons&inputes/buttons.module.scss
+++ b/src/pagesAdmin/AchievementsConstructor/buttons&inputes/buttons.module.scss
@@ -3,6 +3,7 @@
   align-self: flex-start;
   
   .searchInput {
+    font-size: 16px;
     color: white;
     padding-left: 40px;
     width: 554px;
