--- a/src/pagesWorker/MyPage/buttons&inputes/buttons.module.scss
+++ b/src/pagesWorker/MyPage/buttons&inputes/buttons.module.scss
@@ -167,6 +167,7 @@ button {
 .searchInputContainer {
   border: none;
 .searchInput {
+  font-size: 16px;
   color: white;
   text-align: left;
   padding-left: 30px;
