--- a/src/pagesAdmin/Workers/AddWorkerButton/AddWorkerButton.module.scss
+++ b/src/pagesAdmin/Workers/AddWorkerButton/AddWorkerButton.module.scss
@@ -1,31 +1,31 @@
 .addWorkerButton {
+  display: flex;
+  align-items: center;
   padding: 12px 18px;
   border-radius: 16px;
   text-decoration: none;
-  background: #6a11c352;
-  border: 1px solid #762dbf52;
-  color: white;
-  opacity: 0.8;
-  font-size: 16px;
-  padding: 8px 24px;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  cursor: pointer;
+  color: #fff;
+  border: none;
+  background: #6A11C3;
   font-size: 20px;
   font-weight: 500;
   line-height: 28px;
+  margin-right: 16px;
+  cursor: pointer;
   transition:
     background-color 0.3s,
     transform 0.3s;
-
+  img {
+    margin-right: 8px;
+  }
   &:hover {
-    background: linear-gradient(90deg, #6a50ea, #8950ea);
+    opacity: 1;
     transform: scale(1.05);
-
-    &:active {
-      background: linear-gradient(90deg, #5938d7, #7638d7);
-      transform: scale(0.95);
-    }
+  }
+  &.active {
+    background-color: #f4f4f40a;
+    color: #fff;
+    opacity: 1;
+    transform: scale(0.95);
   }
 }
