--- a/src/pagesAdmin/Workers/WorkerPage/ModalAchieveLibrary/ModalAchieveLibrary.module.scss
+++ b/src/pagesAdmin/Workers/WorkerPage/ModalAchieveLibrary/ModalAchieveLibrary.module.scss
@@ -10,8 +10,7 @@
   width: 80%; /* Ширина окна 80% от ширины экрана */
   height: 80%; /* Высота окна 80% от высоты экрана */
   overflow-y: auto; /* Включаем вертикальный скролл при необходимости */
-  background: rgba(32, 32, 33);
-
+  background-color: var(--additional-background-color);
   z-index: 1000;
 }
 
@@ -40,16 +39,26 @@
   color: rgba(244, 244, 244, 0.7);
 }
 
-h1 {
-  align-items: left;
-  justify-self: center;
-  font-family: "Open Sans";
-  font-size: 24px;
-  font-weight: 600;
-  line-height: 32px;
-  letter-spacing: 0.01em;
-  text-align: left;
-  color: rgba(244, 244, 244, 1);
+.titleContainer {
+  display: flex;
+
+  img {
+    margin-top: 18px;
+    width: 48px;
+    height: 40px;
+  }
+
+  h1 {
+    align-items: left;
+    justify-self: center;
+    font-family: "Open Sans";
+    font-size: 24px;
+    font-weight: 600;
+    line-height: 32px;
+    letter-spacing: 0.01em;
+    text-align: left;
+    color: rgba(244, 244, 244, 1);
+  }
 }
 
 .searchInput {
@@ -60,23 +69,24 @@ h1 {
 }
 
 .achievementsList {
+  margin-top: 10px;
   width: 100%;
   display: grid;
-  grid-template-columns: repeat(3, 1fr);
-  gap: 20px;
+  grid-template-columns: repeat(4, 1fr);
+  gap: 40px;
 }
 
 .achieveCard {
+  margin-top: 5px;
+  position: relative;
+  overflow: hidden;
   border-radius: 20px;
   align-items: center;
   display: flex;
   justify-content: center;
-  width: 210px;
-  height: 274px;
+  width: 210px;  
+  height: 274px;  //НАДО БОЛЬШЕ
   flex-direction: column;
-  background-size: cover;
-  background-repeat: no-repeat;
-  background-position: center;
   overflow: hidden;
   box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
   transition:
@@ -86,11 +96,24 @@ h1 {
   color: #fff;
   font-size: 1.25rem;
   cursor: pointer;
+  
+    &:hover {
+      transform: translateY(-5px);
+      box-shadow: 0 6px 12px rgba(0, 0, 0, 0.2);
+    }
 
-  &:hover {
-    transform: translateY(-5px);
-    box-shadow: 0 6px 12px rgba(0, 0, 0, 0.2);
-  }
+    &::before {
+      content: "";
+      position: absolute;
+      top: 0;
+      left: 0;
+      width: 100%;
+      height: 100%;
+      background-image: var(--background-image);
+      background-repeat: no-repeat;
+      background-position: center;
+      z-index: 0;
+    }
 }
 
 .achieveButton {
@@ -112,6 +135,52 @@ h1 {
 }
 
 .achieveImg {
-  width: 140px;
-  height: 140px;
+  width: 120px;
+  height: 120px;
+  margin-top: 12px;
+  z-index: 1;
+}
+
+
+.achieveContent {
+  padding: 1rem;
+  text-align: center;
+  z-index: 1;
+  width: 210px;
+  word-wrap: break-word; // Автоматический перенос текста
+
+  .achieveTitle {
+    margin: 10px 5px; 
+    color: rgb(244, 244, 244);
+    font-size: 18px;
+    font-weight: 700;
+    line-height: 18px;
+    letter-spacing: 0.01em;
+    text-align: center;
+  }
+
+  .achieveDescription {
+    margin: 10px 5px;
+    font-size: 14px;
+    font-weight: 400;
+    line-height: 18px;
+    letter-spacing: 0.01em;
+    text-align: center;
+    color: rgb(244, 244, 244);
+    opacity: 0.8;
+    overflow: hidden;
+    text-overflow: ellipsis; // Добавление троеточия в конце текста
+    display: -webkit-box;
+    -webkit-line-clamp: 2; // Ограничение текста до двух строк
+    -webkit-box-orient: vertical;
+  }
+
+  .achieveRank {
+    display: flex;
+    justify-content: center;
+    font-size: 20px;
+    font-weight: 500;
+    line-height: 24px;
+    margin: 20px 5px 10px;
+  }
 }
