--- a/src/pagesWorker/MyPage/WorkerAchievements/WorkerAchievements.module.scss
+++ b/src/pagesWorker/MyPage/WorkerAchievements/WorkerAchievements.module.scss
@@ -28,16 +28,17 @@
 }
 
 .workerAchievementsList {
+  margin-top: 30px;
   height: 650px;
   overflow-y: auto; /* вертикальный скролл */
   overflow-x: hidden; /* Скрыть горизонтальный скролл */
   display: grid;
   grid-template-columns: repeat(3, 1fr); /* Три столбца равной ширины */
-  gap: 20px; /* Расстояние между элементами */
+  //gap: 20px; 
 }
 
 .achievementCard {
-  margin-top: 30px;
+  margin-top: 5px;
   position: relative;
   overflow: hidden;
   border-radius: 20px;
